[package]
name = "lockfree-orderbook"
version = "0.1.0"
edition = "2021"
description = "High-performance lock-free order matching engine for electronic trading"
authors = ["Trading Systems Engineer"]
license = "MIT"

[dependencies]
crossbeam = { version = "0.8", features = ["channel"] }
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "matching"
harness = false

[[bench]]
name = "throughput"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
